fix some properties of Inventory